# EasyRayTracing

./: .gitignore  prepare.sh  requirements.txt
src/: camera.py  cli.py  common.py  main.py  ray.py  scene.py  version.py
src/rt_impl/: .gitignore  CMakeLists.txt  common.h  interface.c  main.c  pixel.c  playground.py  ray_tracing.c  ray_tracing.h  setup.py
src/rt_impl/cpu_impl/: CMakeLists.txt  alg.c  bvh.c  camera.c  interface.c  kdtree.c  linalg.c  material.c  patch.c  pixel.c  ray.c  scene.c  utils.c  vector.c
src/rt_impl/cpu_impl/include/: alg.h  bvh.h  camera.h  kdtree.h  linalg.h  material.h  patch.h  pixel.h  ray.h  scene.h  utils.h  vector.h
src/rt_impl/cuda_impl/: CMakeLists.txt  cuda_rt_impl.cu
src/rt_impl/rt_models/: __init__.py  camera.py  scene.py
src/rt_impl/src/: alg.c  alg.h  interface.c  linalg.c  patch.c  patch.h  ray.c  scene.c  utils.c  utils.h
src/rt_impl/src/include/: alg.h  camera.h  linalg.h  patch.h  pixel.h  ray.h  scene.h  utils.h
src/wavefront/: __init__.py  object.py  parser.py
src/wavefront/common/: __init__.py  context.py  handler.py  parser.py  utils.py
src/wavefront/handler/: Context.py  FaceHandler.py  FixedLengthVectorHandler.py  Handler.py  VertexHandler.py  VertexNormalHandler.py  VertexTextureHandler.py  __init__.py  common.py  context.py
src/wavefront/mtl/: __init__.py  context.py  handler.py  material.py  parser.py  repo.py  spec
src/wavefront/mtl/handler/: __init__.py  context.py  handler.py
test/: bvh  bvh_naive  naive  ui.py
test/scenes/box/: box.mtl
test/scenes/bunny/: check.py
test/scenes/clock/: restructure.py
